# IntentRecognition

./: CMakeLists.txt  README.md  makefile.txt
src/: IntentRecognition.vcxproj  IntentRecognition.vcxproj.filters  MakeFile.txt  intent.json  intentRecognition.cpp  intentRecognition.h  main.cpp
tests/: CMakeLists.txt  test.cpp
